[package]
name = "consensus-common"
version = "0.1.0"
authors = ["Scalar org <tech@scalar.org>"]
license = "Apache-2.0"
publish = true
edition = "2021"

[dependencies]
async-trait = "0.1"
tokio = "1.37"
tokio-stream = "0.1.15"
prost = { version = "0.12.4" }
tonic = { version = "0.11.0" }

[build-dependencies]
prost-build = { version = "0.12.4" }
tonic-build = { version = "0.11.0" }
vergen = { version = "8.0.0", features = ["build", "cargo", "git", "gitcl"] }